--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js" type="text/javascript"></script>
+  <script src="script.js"></script>
 </head>
 <body>
 
   <!-- Change DroneDeploy To your Name -->
-  <div class="container pdf-button" onclick="updateTile()">
+  <div class="container pdf-button" onclick="downloadPDF()">
     <div class="row">
       <div class="col-1">
         <img class="logo" src="img/icon2.png">
@@ -19,6 +21,5 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
