--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js" type="text/javascript"></script>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </head>
 <body>
 
